force-app/main/default/objects/pdffiller_sfree__UserIntegrationStatus__c/pdffiller_sfree__UserIntegrationStatus__c.object-meta.xml
<CustomObject>
    <label>User Integration Status</label>
    <nameField>
        <label>User Integration Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Integration Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>