force-app/main/default/objects/pdffiller_sfree__UserIntegrationStatus__c/fields/pdffiller_sfree__AS_Status__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__AS_Status__c</fullName>
    <label>AS_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>