force-app/main/default/objects/pdffiller_sfree__UserIntegrationStatus__c/fields/pdffiller_sfree__Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Integration_Status__c</fullName>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pdffiller_sfree__Integration_Status</valueSetName>
    </valueSet>
</CustomField>