force-app/main/default/objects/pdffiller_sfree__UserIntegrationStatus__c/fields/pdffiller_sfree__OrganizationUserId__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__OrganizationUserId__c</fullName>
    <label>OrganizationUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>